# cmmm

./: .LICENSE  .cmake-format.yml  .cmake-linter.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: .env  .env.docs  docs.yml  environment.yml  gh-pages.yml  jekyll-gh-pages.yml  linux.yml  macOS.yml  release.yml  windows.yml
.github/workflows/mamba/: docs.yml
cmake/: CMakeMM.cmake  Changelog.cmake  GetCMakeMM.cmake
docs/: .cminx.yaml  CMakeLists.txt  colors.py  conf.py  conf.py.in  index.html  index.rst
docs/cmake/: index.rst
docs/static/css/: custom.css
tests/: CMakeLists.txt  download.cmake  download_default.cmake  download_fetchcontent.cmake  download_latest.cmake  filename.cmake  load_modules.cmake  module_list_bitbucket.cmake  module_list_github.cmake  module_list_gitlab.cmake  two_module_lists.cmake
tests/FetchContent/: CMakeLists.txt
tests/download/: CMakeLists.txt  check_parameters.cmake  default.cmake  destination.cmake  latest.cmake  v0.cmake
tests/download/FetchContent/: CMakeLists.txt
tests/moduleList/: CMakeLists.txt
tests/moduleList/bitbucket/: CMakeLists.txt  default.cmake  destination.cmake  load_module.cmake  modules.cmake
tests/moduleList/github/: CMakeLists.txt  default.cmake  destination.cmake  load_module.cmake  modules.cmake
tests/moduleList/gitlab/: CMakeLists.txt  default.cmake  destination.cmake  load_module.cmake  modules.cmake
